--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -14,6 +14,9 @@
       right: 0;
       margin: 0 auto;
       padding: 0 134px;
+      @media(max-width: 992px){
+        padding: 0 55px;
+      }
       .btn {
         margin-left: 0;
         max-width: 220px;
@@ -29,17 +32,42 @@
         flex-direction: column;
         max-width: 1430px;
         height: calc(60% + 48px);
+
         .txt-inner {
           margin-top: auto;
           margin-left: 0;
           min-height: 20.5em;
+          @media(max-width: 992px){
+            max-width: unset;
+            width: 100%;
+            br{
+              display: none;
+            }
+          }
           h2 {
             margin-top: 0;
             line-height: 1.35;
             font-size: 47px;
             margin-bottom: 17px;
+            @media(max-width: 992px){
+              margin: auto;
+              font-size: 35px;
+            }
+            @media(max-width: 568px){
+              font-size: 22px;
+            }
+          }
+        p{
+          @media(max-width: 992px){
+            margin-bottom: auto;
           }
         }
+        }
+
+      }
+      .btn{
+        margin: auto;
+        max-width: 290px;
       }
     }
     .slider-item {
@@ -47,12 +75,24 @@
         padding-top: 54px;
         display: flex;
         justify-content: space-between;
+        @media(max-width: 992px){
+          padding-top: 30px;
+        }
+        @media(max-width: 568px){
+          margin: 0 -30px;
+        }
         .coin-part {
         }
 
         .logo {
           margin-bottom: 18px;
           height: 58px;
+          @media(max-width: 992px){
+            height: 45px;
+          }
+          @media(max-width: 568px){
+            height: 38px;
+          }
           img {
             height: 100%;
           }
@@ -66,21 +106,46 @@
             font-size: 24px;
             line-height: 1.15;
             color: #ffffff;
+            @media(max-width: 992px){
+              font-size: 18px;
+            }
+            @media(max-width: 568px){
+              font-size: 17px;
+            }
             span {
               font-size: 16px;
               opacity: 0.6;
               margin-left: 12px;
+              @media(max-width: 992px){
+                font-size: 15px;
+              }
+              @media(max-width: 568px){
+                display: block;
+                margin-left: 0;
+              }
             }
           }
         }
         .type {
           padding-top: 16px;
+          @media(max-width: 992px){
+            padding-top: 7px;
+          }
+          @media(max-width: 568px){
+            padding-top: 4px;
+          }
           span {
             font-weight: 500;
             font-size: 24px;
             line-height: 28px;
             text-transform: uppercase;
             color: rgba(255, 255, 255, 0.5);
+            @media(max-width: 992px){
+              font-size: 18px;
+            }
+            @media(max-width: 568px){
+              font-size: 15px;
+            }
           }
         }
       }
@@ -102,6 +167,9 @@
           right: -999px;
           margin: auto;
           min-height: 100%;
+          @media(max-width: 992px){
+            width: auto;
+          }
         }
       }
     }
@@ -134,10 +202,16 @@
   .slick-prev {
     left: 56px;
     background-image: url(assets/img/slider-arr-left.svg);
+    @media (max-width: 992px) {
+      left: 15px;
+    }
   }
   .slick-next {
     right: 56px;
     background-image: url(assets/img/slider-arr-right.svg);
+    @media (max-width: 992px) {
+      right: 15px;
+    }
   }
   .arrows-container {
     position: absolute;
@@ -150,12 +224,27 @@
   }
   .slider-item {
     position: relative;
+    min-height: 640px;
     .bg-wr {
+      padding-top: 44%;
+      position: relative;
+      overflow: hidden;
+      height: 100%;
+      min-height: 640px;
       img {
-        width: 100%;
-        position: relative;
+        // width: 100%;
+        // position: relative;
 
         display: block;
+        width: 100%;
+        position: absolute;
+        display: block;
+        top: -999px;
+        bottom: -999px;
+        left: -999px;
+        right: -999px;
+        margin: auto;
+        min-height: 100%;
       }
     }
     .slide-txt {
@@ -168,11 +257,28 @@
       left: 0;
       right: 0;
       display: flex;
+      @media (max-width: 1280px) {
+        height: calc(47% + 48px);
+      }
+      @media (max-width: 992px) {
+        padding: 0 50px;
+        justify-content: center;
+      }
+      @media(max-width: 680px){
+        height: calc(52% + 48px);
+      }
+
       .txt-inner {
         display: flex;
         flex-direction: column;
         max-width: 697px;
         margin-left: 16px;
+        @media (max-width: 992px) {
+          margin-left: 0;
+          text-align: center;
+          align-items: center;
+          margin: 0 auto;
+        }
       }
       h2 {
         margin-top: auto;
@@ -183,7 +289,12 @@
         color: #ffffff;
         font-size: 35px;
         margin-bottom: 22px;
-
+        @media (max-width: 1280px) {
+          font-size: 30px;
+        }
+        @media (max-width: 580px) {
+          font-size: 22px;
+        }
         span {
           font-weight: 700;
           font-size: 2.2em;
@@ -197,6 +308,12 @@
         font-size: 24px;
         line-height: 1.15;
         color: #aab1c4;
+        @media (max-width: 1280px) {
+          font-size: 23px;
+        }
+        @media (max-width: 580px) {
+          font-size: 17px;
+        }
       }
     }
   }
@@ -212,6 +329,13 @@
     height: calc(50% - 110px);
     bottom: 0;
     width: 100%;
+
+    @media (max-width: 1280px) {
+      height: calc(52% - 110px);
+    }
+    @media (max-width: 992px) {
+      padding: 0 50px;
+    }
   }
   form {
     display: flex;
@@ -219,6 +343,14 @@
     max-width: 511px;
     width: 100%;
     margin-left: 16px;
+    @media (max-width: 992px) {
+      margin-left: 0;
+      justify-content: center;
+      margin: 0 auto;
+    }
+    @media (max-width: 580px) {
+      flex-direction: column;
+    }
     .wrap-input {
       margin-right: 20px;
       width: 100%;
@@ -231,6 +363,10 @@
       font-size: 17px;
       line-height: 55px;
       color: #000;
+      @media (max-width: 580px) {
+        font-size: 15px;
+        height: 45px;
+      }
       &:placeholder {
         font-weight: normal;
         font-size: 16px;
@@ -246,6 +382,12 @@
       margin-left: 0;
       font-size: 17px;
       line-height: 53px;
+      @media (max-width: 580px) {
+        font-size: 15px;
+        line-height: 43px;
+        max-width: 290px;
+        margin: 0 auto;
+      }
     }
   }
 }
@@ -263,6 +405,10 @@
     position: relative;
     top: -48px;
     background-color: #222133;
+    overflow: hidden;
+    @media(max-width: 992px){
+      padding: 13px 0;
+    }
   }
   .run-line-item {
     display: flex;
@@ -270,12 +416,16 @@
     padding: 6px 23px;
     border-right: 1px solid #363f4d;
     width: calc(100% / 6);
+    min-width: 190px;
     &:last-child {
       border-right: none;
     }
     .pair {
       width: 50%;
       margin-bottom: 16px;
+      @media(max-width: 992px){
+        margin-bottom: 6px;
+      }
       span {
         font-weight: normal;
         font-size: 14px;
@@ -288,12 +438,16 @@
       width: 50%;
       text-align: right;
       margin-bottom: 16px;
+      @media(max-width: 992px){
+        margin-bottom: 6px;
+      }
       span {
         font-weight: normal;
         font-size: 14px;
         line-height: 1.15;
 
         color: #58aa46;
+        
       }
     }
     .course {
@@ -304,6 +458,9 @@
         font-size: 21px;
         line-height: 1.25;
         color: #ffffff;
+        @media(max-width: 992px){
+          font-size: 17px;
+        }
       }
     }
     .direction {
@@ -339,11 +496,24 @@
 .markets-home {
   background-color: #e5e5e5;
   padding: 26px 0 83px;
+
+  @media (max-width: 992px) {
+    padding: 15px 15px 43px;
+  }
   .markets-block-link {
     display: flex;
     max-width: 1272px;
     margin: 0 auto;
     padding: 0 34px;
+    @media (max-width: 1200px) {
+      padding: 0 15px;
+    }
+    @media (max-width: 992px) {
+      flex-direction: column;
+      br {
+        display: none;
+      }
+    }
   }
   .link-item {
     width: 25%;
@@ -352,6 +522,10 @@
     text-align: center;
     flex-direction: column;
     position: relative;
+    @media (max-width: 992px) {
+      width: 100%;
+      margin-bottom: 40px;
+    }
     .lnk {
       position: absolute;
       top: 0;
@@ -362,6 +536,9 @@
     }
     .icon-wr {
       margin-bottom: 21px;
+      @media (max-width: 992px) {
+        margin-bottom: 10px;
+      }
       img {
       }
     }
@@ -379,6 +556,10 @@
 .markets-table-container {
   padding-bottom: 100px;
   background-color: #e5e5e5;
+  @media (max-width: 1200px) {
+    padding: 0 15px 100px;
+    overflow: auto;
+  }
 }
 .markets-table {
   max-width: 1160px;
@@ -386,6 +567,9 @@
   padding: 0 0 54px;
   background-color: #fff;
   margin-bottom: 9px;
+  @media (max-width: 1200px) {
+    min-width: 760px;
+  }
   .search-block {
     max-width: 245px;
     position: relative;
@@ -394,6 +578,9 @@
     align-items: center;
     padding: 30px 10px 21px;
     margin: 0 auto;
+    @media (max-width: 780px) {
+      margin: 0 0 0 23px;
+    }
     input {
       position: relative;
       display: block;
@@ -404,11 +591,17 @@
       width: calc(100% - 25px);
       border: none;
       outline: none;
+      @media (max-width: 580px) {
+        font-size: 18px;
+      }
       &::placeholder {
         font-weight: 300;
         font-size: 24px;
         line-height: 28px;
         color: #e5ebf1;
+        @media (max-width: 580px) {
+          font-size: 18px;
+        }
       }
     }
     label {
@@ -502,6 +695,9 @@
     }
   }
   .table {
+    @media (max-width: 1200px) {
+      display: table;
+    }
     .thead {
       border-bottom: 1px solid #e5ebf1;
       .thead-item {
@@ -520,6 +716,9 @@
       .change {
         width: 130px;
         text-align: right;
+        @media (max-width: 580px) {
+          width: 95px;
+        }
       }
       .last-pr {
         text-align: right;
@@ -543,6 +742,10 @@
         line-height: 1.15;
         color: #000000;
         padding: 16px 10px 17px;
+        @media (max-width: 580px) {
+          font-size: 14px;
+          padding: 11px 10px 11px;
+        }
       }
       .fav {
         padding-left: 33px;
@@ -578,20 +781,44 @@
 .info-graph {
   background: #222133;
   padding: 110px 0 98px;
+  @media (max-width: 992px) {
+    padding: 50px 0 25px;
+  }
   .markets-block-link {
     display: flex;
     max-width: 1286px;
     margin: 0 auto;
     padding: 0 34px;
+    @media (max-width: 992px) {
+      padding: 0 15px;
+      flex-direction: column;
+      align-items: center;
+    }
     .link-item {
       width: 25%;
       display: flex;
       align-items: center;
       text-align: center;
       flex-direction: column;
+      @media (max-width: 992px) {
+        width: auto;
+        max-width: 380px;
+        margin-bottom: 40px;
+        br {
+          display: none;
+        }
+      }
+      @media (max-width: 380px) {
+        br {
+          display: block;
+        }
+      }
       .icon-wr {
         margin-bottom: 41px;
         text-align: center;
+        @media (max-width: 992px) {
+          margin-bottom: 11px;
+        }
         img {
         }
       }
@@ -612,20 +839,36 @@
   background: #1f1e30;
   padding: 112px 0 108px;
   border-bottom: 1px solid #363f4d;
+  @media (max-width: 992px) {
+    padding: 65px 0 58px;
+  }
 }
 .bottom-form-wr {
   display: flex;
   max-width: 1231px;
   margin: 0 auto;
   padding: 0 34px 0 38px;
+  @media (max-width: 992px) {
+    padding: 0 15px;
+    flex-direction: column;
+  }
   .left-part {
     width: 55%;
+    @media (max-width: 992px) {
+      width: auto;
+      text-align: center;
+      margin-bottom: 35px;
+    }
     .txt-wr {
       h2 {
         font-weight: 500;
         font-size: 36px;
         line-height: 1.15;
         margin-bottom: 18px;
+        @media(max-width: 680px){
+          font-size: 26px;
+          margin-bottom: 11px;
+        }
 
         color: #ffffff;
       }
@@ -634,33 +877,53 @@
         font-size: 18px;
         line-height: 1.15;
         color: #7e849a;
+        @media(max-width: 680px){
+          font-size: 17px;
+        }
       }
     }
   }
   .right-part {
     width: 48%;
-
+    @media (max-width: 992px) {
+      max-width: 560px;
+      margin: 0 auto;
+      width: 100%;
+    }
     form {
       display: flex;
       align-items: flex-start;
       width: 100%;
-
+      @media(max-width: 680px){
+        flex-direction: column;
+        max-width: 290px;
+        margin: 0 auto;
+      }
       .wrap-input {
         margin-right: 16px;
         width: 100%;
+        @media(max-width: 680px){
+          margin-right: 0;
+        }
       }
       .wrap-input__input {
         display: block;
         background: #fff;
         height: 48px;
         font-size: 17px;
-        line-height: 55px;
+
         color: #000;
+        @media(max-width: 680px){
+          font-size: 15px;
+          height: 45px;
+        }
         &:placeholder {
           font-weight: normal;
           font-size: 16px;
-          line-height: 55px;
           color: #aab1c4;
+          @media(max-width: 680px){
+            font-size: 15px;
+          }
         }
       }
       .wrap-input__label {
@@ -671,6 +934,11 @@
         margin-left: 0;
         font-size: 17px;
         line-height: 46px;
+        @media(max-width: 680px){
+          font-size: 15px;
+          line-height: 43px;
+          max-width: unset;
+        }
       }
     }
   }
@@ -682,6 +950,9 @@
   right: 30px;
   display: flex;
   z-index: 2;
+  @media (max-width: 1200px) {
+    display: none;
+  }
   .dots-item {
     max-width: 160px;
     margin-right: 8px;
