--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -225,12 +225,18 @@
   .slider-item {
     position: relative;
     min-height: 640px;
+    @media(max-width: 680px){
+      min-height: calc(100vh - 88px);
+    }
     .bg-wr {
       padding-top: 44%;
       position: relative;
       overflow: hidden;
       height: 100%;
       min-height: 640px;
+      @media(max-width: 680px){
+        min-height: calc(100vh - 88px);
+      }
       img {
         // width: 100%;
         // position: relative;
@@ -265,7 +271,7 @@
         justify-content: center;
       }
       @media(max-width: 680px){
-        height: calc(52% + 48px);
+        height: calc(48% + 48px);
       }
 
       .txt-inner {
@@ -335,6 +341,9 @@
     }
     @media (max-width: 992px) {
       padding: 0 50px;
+    }
+    @media(max-width: 680px){
+      height: calc(55%  - 110px);
     }
   }
   form {
