--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -238,9 +238,6 @@
         min-height: calc(100vh - 88px);
       }
       img {
-        // width: 100%;
-        // position: relative;
-
         display: block;
         width: 100%;
         position: absolute;
@@ -251,6 +248,9 @@
         right: -999px;
         margin: auto;
         min-height: 100%;
+        @media(max-width: 992px){
+          width: auto;
+        }
       }
     }
     .slide-txt {
