--- a/src/app/main-page/fs-slider/fs-slider.component.html
+++ b/src/app/main-page/fs-slider/fs-slider.component.html
@@ -1,7 +1,7 @@
 <div class="fs-slider-container">
   <div class="arrows-container"></div>
   <ngx-slick-carousel
-    class="carousel run-line-inner"
+    class="carousel"
     #slickModal="slick-carousel"
     [config]="slideConfig"
     (afterChange)="afterChange($event)">
