--- a/src/app/main-page/run-line/run-line.component.html
+++ b/src/app/main-page/run-line/run-line.component.html
@@ -1,90 +1,134 @@
 <div class="run-line">
-  <div
-    class="carousel run-line-inner">
-    <div class="slide run-line-item">
-      <div class="pair">
-        <span>ZEC/USDC</span>
+  <div class="run-line-wr">
+    <div
+      class="carousel run-line-inner">
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>BTC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-      <div class="change">
-        <span>+18.33%</span>
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>ETH/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-      <div class="course">
-        <span>114.32</span>
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>CRON/BTC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-      <div class="direction">
-        <span></span>
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>USD/BTC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-    </div>
-    <div class="slide run-line-item">
-      <div class="pair">
-        <span>ZEC/USDC</span>
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>ABBC/USD</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-      <div class="change">
-        <span>+18.33%</span>
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>ACU/ETH</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-      <div class="course">
-        <span>114.32</span>
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>BCX/BTC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-      <div class="direction">
-        <span></span>
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>DGTX/BTC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-    </div>
-    <div class="slide run-line-item">
-      <div class="pair">
-        <span>ZEC/USDC</span>
+      <div class="slide run-line-item" data-position="0">
+        <div class="pair">
+          <span>ZEC/USDC</span>
+        </div>
+        <div class="change">
+          <span>+18.33%</span>
+        </div>
+        <div class="course">
+          <span>114.32</span>
+        </div>
+        <div class="direction">
+          <span></span>
+        </div>
       </div>
-      <div class="change">
-        <span>+18.33%</span>
-      </div>
-      <div class="course">
-        <span>114.32</span>
-      </div>
-      <div class="direction">
-        <span></span>
-      </div>
-    </div>
-    <div class="slide run-line-item">
-      <div class="pair">
-        <span>ZEC/USDC</span>
-      </div>
-      <div class="change">
-        <span>+18.33%</span>
-      </div>
-      <div class="course">
-        <span>114.32</span>
-      </div>
-      <div class="direction">
-        <span></span>
-      </div>
-    </div>
-    <div class="slide run-line-item">
-      <div class="pair">
-        <span>ZEC/USDC</span>
-      </div>
-      <div class="change">
-        <span>+18.33%</span>
-      </div>
-      <div class="course">
-        <span>114.32</span>
-      </div>
-      <div class="direction">
-        <span></span>
-      </div>
-    </div>
-    <div class="slide run-line-item">
-      <div class="pair">
-        <span>ZEC/USDC</span>
-      </div>
-      <div class="change">
-        <span>+18.33%</span>
-      </div>
-      <div class="course">
-        <span>114.32</span>
-      </div>
-      <div class="direction">
-        <span></span>
-      </div>
-    </div>
 
+    </div>
   </div>
 </div>
