--- a/src/app/main-page/bottom-slider/bottom-slider.component.html
+++ b/src/app/main-page/bottom-slider/bottom-slider.component.html
@@ -1,7 +1,7 @@
 <div class="fs-slider-container bottom-slider">
   <div class="bottom-arrows-container"></div>
   <ngx-slick-carousel
-    class="carousel run-line-inner"
+    class="carousel"
     #slickModal2="slick-carousel"
     (afterChange)="afterChange($event)"
     [config]="slideConfig">
