--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -404,31 +404,33 @@
 .run-line {
   background-color: #e5e5e5;
 
-  .slick-track {
-    width: 100%;
-    display: flex;
+  .run-line-wr{
+    overflow: hidden;
+    position: relative;
+    top: -48px;
+    background-color: #222133;
   }
   .run-line-inner {
     display: flex;
     padding: 37px 0;
-    position: relative;
-    top: -48px;
-    background-color: #222133;
-    overflow: hidden;
+    
+    
     @media(max-width: 992px){
       padding: 13px 0;
     }
   }
   .run-line-item {
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     padding: 6px 23px;
     border-right: 1px solid #363f4d;
     width: calc(100% / 6);
     min-width: 190px;
-    &:last-child {
-      border-right: none;
-    }
+    will-change: transform;
+   @media(min-width: 993px){
+    min-width: 233px;
+   }
     .pair {
       width: 50%;
       margin-bottom: 16px;
