--- a/src/app/main-page/run-line/run-line.component.html
+++ b/src/app/main-page/run-line/run-line.component.html
@@ -3,6 +3,7 @@
     <div
       class="carousel run-line-inner">
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>BTC/USDC</span>
         </div>
@@ -17,6 +18,7 @@
         </div>
       </div>
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>ETH/USDC</span>
         </div>
@@ -31,6 +33,7 @@
         </div>
       </div>
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>CRON/BTC</span>
         </div>
@@ -45,6 +48,7 @@
         </div>
       </div>
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>USD/BTC</span>
         </div>
@@ -59,6 +63,7 @@
         </div>
       </div>
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>ABBC/USD</span>
         </div>
@@ -73,6 +78,7 @@
         </div>
       </div>
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>ACU/ETH</span>
         </div>
@@ -87,6 +93,7 @@
         </div>
       </div>
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>BCX/BTC</span>
         </div>
@@ -101,6 +108,7 @@
         </div>
       </div>
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>DGTX/BTC</span>
         </div>
@@ -115,6 +123,7 @@
         </div>
       </div>
       <div class="slide run-line-item" data-position="0">
+        <a class="run-line-lnk" href="#"></a>
         <div class="pair">
           <span>ZEC/USDC</span>
         </div>
