--- a/src/assets/scss/pages/_home-page.scss
+++ b/src/assets/scss/pages/_home-page.scss
@@ -419,6 +419,13 @@
       padding: 13px 0;
     }
   }
+  .run-line-lnk{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
   .run-line-item {
     position: relative;
     display: flex;
