--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -114,6 +114,9 @@
       </div>
       <div class="inside-page-wr">
         <div class="inside-page-item">
+          <a href="https://about.exrates.me/about-us"><span>{{'About us' | translate}}</span></a>
+        </div>
+        <div class="inside-page-item">
           <a href="https://about.exrates.me/support-center"><span>Support</span></a>
         </div>
         <div class="inside-page-item">
