--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -150,14 +150,13 @@
       </li>
 
       <li class="menu__item">
-        <ng-container>
-          <a
-            class="menu__link"
-            href="https://about.exrates.me/about-us"
-          >
-            <span class="menu__link-text">{{'About us' | translate}}</span>
-          </a>
-        </ng-container>
+        <a
+          class="menu__link"
+          routerLink="/free-coins"
+          routerLinkActive="menu__link--active"
+        >
+          <span class="menu__link-text">{{'Free coins' | translate}}</span>
+        </a>
       </li>
       <li class="menu__item">
         <ng-container>
